--- a/superheroApi/public/css/tableSuperhero.css
+++ b/superheroApi/public/css/tableSuperhero.css
@@ -1,7 +1,7 @@
 body {
-    background: linear-gradient(45deg, #ff0000, #0000ff);
+    background: linear-gradient(45deg, #00ff0d, #00ffaa);
     color: #fff;
-    font-family: 'Comic Sans MS', cursive, sans-serif;
+    font-family: 'Raleway', sans-serif;
     text-align: center;
     padding: 20px;
 }
@@ -26,8 +26,8 @@ body {
 .btn_search{
     padding: 10px;
     margin-top: 15px;
-    background: yellow;
-    color: black;
+    background: rgba(0, 0, 0, 0.962);
+    color: rgb(255, 255, 255);
     font-weight: bold;
     border: none;
     border-radius: 5px;
@@ -38,7 +38,7 @@ body {
 }
 
 .btn_search:hover {
-    background: red;
+    background: rgb(174, 0, 255);
     color: white;
     transform: scale(1.03);
 }
@@ -73,7 +73,7 @@ table {
 }
 
 table, th, td {
-    border: 2px solid yellow;
+    border: 2px solid rgb(18, 18, 15);
 }
 
 th, td {
@@ -84,7 +84,7 @@ th, td {
 }
 
 th {
-    background: red;
+    background:rgb(174, 0, 255);
     font-size: 1.1rem;
     text-transform: uppercase;
 }
