--- a/superheroApi/public/css/custom.css
+++ b/superheroApi/public/css/custom.css
@@ -1,7 +1,7 @@
 body {
-    background: linear-gradient(45deg, #ff0000, #0000ff);
+    background: linear-gradient(45deg,  #00ff0d, #00ffaa);
     color: #fff;
-    font-family: 'Comic Sans MS', cursive, sans-serif;
+    font-family: 'Raleway', sans-serif;
     text-align: center;
     height: 100vh;
     /* display: flex; */
