--- a/superheroApi/public/css/dashboard.css
+++ b/superheroApi/public/css/dashboard.css
@@ -1,7 +1,7 @@
 body {
-    background: linear-gradient(45deg, #ff0000, #0000ff);
+    background: linear-gradient(45deg, #00ff0d, #00ffaa);
     color: #fff;
-    font-family: 'Comic Sans MS', cursive, sans-serif;
+    font-family: 'Raleway', sans-serif;
     text-align: center;
     height: 100vh;
     display: flex;
@@ -17,7 +17,7 @@ form{
 }
 
 .container {
-    background: rgba(0, 0, 0, 0.8);
+    background: rgba(16, 153, 21, 0.8);
     padding: 40px;
     border-radius: 15px;
     box-shadow: 0px 0px 20px 5px yellow;
