--- a/superheroApi/public/css/header.css
+++ b/superheroApi/public/css/header.css
@@ -19,7 +19,7 @@ h1 {
     font-weight: bold;
     cursor: pointer;
     text-decoration: none;
-    font-family: 'Comic Sans MS', cursive, sans-serif;
+    font-family: 'Raleway', sans-serif;
 }
 
 .creat:hover,
